@@ -1,6 +1,8 @@
 Release 3.0.1 Start 21/05/2022 End --/--/20--
 - 21/05/2022
 01.  svctool: redirect envdir error message for missing dir to /dev/null
+- 26/05/2022
+02.  svctool: fix original value of me getting overwritten by config-fast
 
 * 
 Release 3.0.0 Start 21/09/2021 End 18/05/2022
